--- a/homeworks/week11/hw2/style.css
+++ b/homeworks/week11/hw2/style.css
@@ -175,7 +175,7 @@ footer {
 .login {
     max-width: 528px;
     padding: 72px 64px 130px;
-    margin: 120px auto 0;
+    margin: 0 auto;
     border: 1px solid black;
 }
 .login h2{
@@ -217,7 +217,9 @@ footer {
     border: none;
     border-bottom: 1px solid #9a9a9a;
 }
-
+h2 + span {
+    margin-left: auto;
+}
 /* post */
 .post article form {
     display: flex;
